--- a/package.json
+++ b/package.json
@@ -73,8 +73,10 @@
 		]
 	},
 	"dependencies": {
+		"bootstrap": "^5.3.1",
 		"prop-types": "^15.6.1",
 		"react": "^16.8.4",
+		"react-bootstrap-counter": "^1.0.1",
 		"react-dom": "^16.8.4",
 		"react-polyfills": "0.0.1",
 		"react-router-dom": "^6.3.0"
