--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
 		"prop-types": "^15.6.1",
 		"react": "^16.8.4",
 		"react-bootstrap-counter": "^1.0.1",
+		"react-countup": "^6.4.2",
 		"react-dom": "^16.8.4",
 		"react-polyfills": "0.0.1",
 		"react-router-dom": "^6.3.0"
